--- a/webroot/css/components/common.css
+++ b/webroot/css/components/common.css
@@ -17,6 +17,21 @@ body {
     background-repeat: no-repeat;
     background-position: center top;
     background-size: cover;
+    position: relative;
+}
+.main-banner:before {
+    z-index: 0;
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #00000040;
+}
+.main-banner>.container {
+    position: relative;
+    z-index: 1;
 }
 .main-banner .heading {
     color: #fff;
