--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -66,6 +66,20 @@
     z-index: 0;
     height: calc(100vh - 50px );
 }
+.top-page-banner:before {
+    z-index: 0;
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #00000040;
+}
+.top-page-banner>.container {
+    position: relative;
+    z-index: 1;
+}
 .top-page-banner-caption {
     padding-bottom: 100px;
 }
