--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -5,14 +5,5 @@
 @import "components/1400px.css";
 @import "components/1200px.css";
 @import "components/992px.css";
-
-
-
-
-
-
-
-
-@media (max-width: 991.98px) {
-
-}
+@import "components/768px.css";
+@import "components/576px.css";
